--- a/dotstar.html
+++ b/dotstar.html
@@ -7,7 +7,7 @@
 
 <body onload="loadInit()">
 
-<h1>DotStar Drawing Tool (<a href="?240mm">240mm disk</a> | <a href="?8x32">8x32 panel</a>)</h1>
+<h1>DotStar Drawing Tool (<a href="?240mm">240mm disc</a> | <a href="?8x32">8x32 panel</a>)</h1>
 <a href="mailto:shawn@glassgiant.com">by Shawn Wilson</a><br />
 
 Model different LED arrangements for DotStar LED discs or rectangles (available from Adafruit.com).  Draw using the tools below.  Copy and paste the Arduino code below into your sketch. <a href="examples/media">Examples</a><br />
