Fixed circle bug. Removed example directory.

--- a/dotstar.html
+++ b/dotstar.html
@@ -8,9 +8,9 @@
 <body onload="loadInit()">
 
 <h1>DotStar Drawing Tool (<a href="?240mm">240mm disc</a> | <a href="?8x32">8x32 panel</a>)</h1>
-<a href="mailto:shawn@glassgiant.com">by Shawn Wilson</a><br />
+by <a href="mailto:shawn@glassgiant.com">Shawn Wilson</a><br />
 
-Model different LED arrangements for DotStar LED discs or rectangles (available from Adafruit.com).  Draw using the tools below.  Copy and paste the Arduino code below into your sketch. <a href="examples/media">Examples</a><br />
+Model different LED arrangements for DotStar LED discs or rectangles (available from <a href="http://Adafruit.com">Adafruit</a>).  Draw using the tools below.  Copy and paste the Arduino code below into your sketch.<br />
 
 <canvas width="500" height="500" id="myCanvas"></canvas><br />
 
